[package]
name = "mlv-simcraft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rust_decimal = "*"
rust_decimal_macros = "*"
kdam = "*"
indoc = "*"
chrono = "*"
statistical = "*"

[lib]
name = "sim"
path = "src/sim/lib.rs"

[[bin]]
name = "thieving-cli"
path = "src/bin/thieving-cli.rs"

[[bin]]
name = "fighting-cli"
path = "src/bin/fighting-cli.rs"
