[package]
name = "mlv-simcraft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rust_decimal = "*"
rust_decimal_macros = "*"
kdam = "*"
indoc = "*"
chrono = "*"
statistical = "*"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
features = ["default"]

[lib]
name = "sim"
path = "src/sim/lib.rs"

[[bin]]
name = "thieving-cli"
path = "src/bin/thieving-cli.rs"

[[bin]]
name = "fighting-cli"
path = "src/bin/fighting-cli.rs"

[[bin]]
name = "thieving-gui"
path = "src/bin/thieving-gui.rs"
